applied numerous code cleanups and exploited new Java 11 efficiencies